@@ -1,5 +1,6 @@
 v5.6
 -----
++ Added ability to add a custom amount to your Steam wallet
 + Added sort option to badge page to sort by number of card drops remaining
 
 v5.5
